--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     environment:
       XDEBUG_CONFIG: remote_enable=1 remote_mode=req remote_host=${ip} remote_port=9000 idekey=phpstorm remote_connect_back=0
       PHP_IDE_CONFIG: "serverName=docker"
+    networks:
+      - redis-net
   web:
     image: nginx:latest
     ports:
@@ -24,6 +26,8 @@ services:
         target: /etc/nginx/conf.d/default.conf
     links:
       - php-fpm
+    networks:
+      - redis-net
   php-cli:
     build:
       context: ./docker/php-cli
@@ -34,3 +38,46 @@ services:
     environment:
       UID: ${uid}
       GID: ${gid}
+    networks:
+      - redis-net
+
+  redis:
+    image: 'redis:5.0.5'
+    networks:
+      - redis-net
+
+  redis-secondary:
+    image: 'redis:5.0.5'
+    command: redis-server --replicaof redis 6379
+    networks:
+      - redis-net
+    depends_on:
+      - redis
+
+  sentinel1:
+    image: 'bitnami/redis-sentinel:latest'
+    networks:
+      - redis-net
+    depends_on:
+      - redis
+      - redis-secondary
+
+  sentinel2:
+    image: 'bitnami/redis-sentinel:latest'
+    networks:
+      - redis-net
+    depends_on:
+      - redis
+      - redis-secondary
+
+  sentinel3:
+    image: 'bitnami/redis-sentinel:latest'
+    networks:
+      - redis-net
+    depends_on:
+      - redis
+      - redis-secondary
+
+networks:
+  redis-net:
+    driver: bridge
