--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
     "require": {
+        "php": "^7.2.21",
         "predis/predis": "^1.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "demo\\": "src"
+        }
     }
 }
