--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       - type: bind
         source: ./
         target: /app
+      - type: bind
+        source: ./docker/php-fpm/php.ini
+        target: /usr/local/etc/php/php.ini
     environment:
       XDEBUG_CONFIG: remote_enable=1 remote_mode=req remote_host=${ip} remote_port=9000 idekey=phpstorm remote_connect_back=0
       PHP_IDE_CONFIG: "serverName=docker"
